2011-07-08  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.7.

2011-07-07  Herbert Xu <herbert@gondor.apana.org.au>

	* Optimize dash -c "command" to avoid a fork.
	* Eliminate unnecessary promotion in echocmd.

2011-05-25  Jim Meyering  <meyering@redhat.com>

	* Avoid using undefined handler.

2011-05-23  Jim Meyering  <meyering@redhat.com>

	* Avoid gcc warning: variable 'oldstackp' set but not used.
	* Avoid clang warning about dead store to "size".

2011-05-22  Jonathan Nieder <jrnieder@gmail.com>

	* Make outc an inline function.

2011-05-02  Kalle Olavi Niemitalo <kon@iki.fi>

	* Remove spurious space in descriptions of PS1, PS2, PS4.

2011-04-10  Jonathan Nieder <jrnieder@gmail.com>
 
	* Remove unused EV_BACKCMD flag.

2011-03-15  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix clobbering of checkkwd.

2011-03-15  Jonathan Nieder <jrnieder@gmail.com>

	* Free IFS state after here document expansion.
	* Use va_copy when reusing a va_list.

2011-03-15  Harald van Dijk <harald@gigawatt.nl>

	* Let funcnode refer to a function definition, not its first command.
	* Improve LINENO support.

2011-03-15  Brian Koropoff <bkoropoff@gmail.com>

	* Port to Solaris.

2011-03-11  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix backslash handling in read(1).

2011-03-10  Jonathan Nieder <jrnieder@gmail.com>

	* Dotcmd should exit with zero when doing nothing.

2011-03-10  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix CTLESC clobbering by read(1).

2011-03-10  Brian Koropoff <bkoropoff@gmail.com>

	* Port to AIX.

2011-03-10  Jilles Tjoelker <jilles@stack.nl>

	* Replace GPL noclobberopen code with the FreeBSD version.
	* Do not split the result of tilde expansion.

2010-11-28  Maciej Żenczykowski <zenczykowski@gmail.com>

	* Mark status as volatile in exitshell.

2010-11-28  Jonathan Nieder <jrnieder@gmail.com>

	* Use EXEXIT in place of EXEXEC.
	* Stop documenting EXSHELLPROC.

2010-11-28  Gerrit Pape <pape@smarden.org>
